[gd_scene load_steps=19 format=2]

[ext_resource path="res://Allgemein/Main.gd" type="Script" id=1]
[ext_resource path="res://Entrypoint/Door.gd" type="Script" id=2]
[ext_resource path="res://Allgemein/Character.tscn" type="PackedScene" id=3]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 20, 20 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 10, 0.1, 10 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 10, 0.1, 10 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 10, 0.1, 10 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 10, 0.1, 10 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 10, 0.1, 10 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 10, 0.1, 10 )

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 0.654902, 0.0392157, 0.0392157, 1 )

[sub_resource type="CubeMesh" id=9]
material = SubResource( 8 )
size = Vector3( 0.2, 6, 3 )

[sub_resource type="BoxShape" id=10]
extents = Vector3( 0.1, 3, 1.5 )

[sub_resource type="BoxShape" id=11]
extents = Vector3( 1.5, 3, 2 )

[sub_resource type="SpatialMaterial" id=12]
albedo_color = Color( 0.321569, 0.0392157, 0.0392157, 1 )

[sub_resource type="CubeMesh" id=13]
material = SubResource( 12 )
size = Vector3( 3, 6, 0.2 )

[sub_resource type="BoxShape" id=14]
extents = Vector3( 1.5, 3, 0.1 )

[sub_resource type="BoxShape" id=15]
extents = Vector3( 2, 3, 1.5 )

[node name="Level" type="Spatial"]
script = ExtResource( 1 )

[node name="Room" type="Spatial" parent="."]

[node name="OmniLight" type="OmniLight" parent="Room"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0 )
omni_range = 64.0

[node name="Walls" type="Spatial" parent="Room"]
editor/display_folded = true

[node name="Floor" type="MeshInstance" parent="Room/Walls"]
editor/display_folded = true
mesh = SubResource( 1 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Room/Walls/Floor"]

[node name="CollisionShape" type="CollisionShape" parent="Room/Walls/Floor/StaticBody"]
shape = SubResource( 2 )

[node name="Ceiling" type="MeshInstance" parent="Room/Walls"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, -1, 0.000523655, 0, -0.000523655, -1, 0, 20, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="StaticBody2" type="StaticBody" parent="Room/Walls/Ceiling"]

[node name="CollisionShape" type="CollisionShape" parent="Room/Walls/Ceiling/StaticBody2"]
shape = SubResource( 3 )

[node name="Wall1" type="MeshInstance" parent="Room/Walls"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 10, -10 )
mesh = SubResource( 1 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Room/Walls/Wall1"]

[node name="CollisionShape" type="CollisionShape" parent="Room/Walls/Wall1/StaticBody"]
shape = SubResource( 4 )

[node name="Wall2" type="MeshInstance" parent="Room/Walls"]
editor/display_folded = true
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 10, 10, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Room/Walls/Wall2"]

[node name="CollisionShape" type="CollisionShape" parent="Room/Walls/Wall2/StaticBody"]
shape = SubResource( 5 )

[node name="Wall3" type="MeshInstance" parent="Room/Walls"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 10, 10 )
mesh = SubResource( 1 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Room/Walls/Wall3"]

[node name="CollisionShape" type="CollisionShape" parent="Room/Walls/Wall3/StaticBody"]
shape = SubResource( 6 )

[node name="Wall4" type="MeshInstance" parent="Room/Walls"]
editor/display_folded = true
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -10, 10, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Room/Walls/Wall4"]

[node name="CollisionShape" type="CollisionShape" parent="Room/Walls/Wall4/StaticBody"]
shape = SubResource( 7 )

[node name="Doors" type="Spatial" parent="Room"]

[node name="DoorF" type="MeshInstance" parent="Room/Doors"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.9, 3, 0 )
mesh = SubResource( 9 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Room/Doors/DoorF"]

[node name="CollisionShape" type="CollisionShape" parent="Room/Doors/DoorF/StaticBody"]
shape = SubResource( 10 )

[node name="AreaDF" type="Area" parent="Room/Doors/DoorF"]
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Room/Doors/DoorF/AreaDF"]
shape = SubResource( 11 )

[node name="DoorD" type="MeshInstance" parent="Room/Doors"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, -9.9 )
mesh = SubResource( 13 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Room/Doors/DoorD"]

[node name="CollisionShape" type="CollisionShape" parent="Room/Doors/DoorD/StaticBody"]
shape = SubResource( 14 )

[node name="AreaDD" type="Area" parent="Room/Doors/DoorD"]
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Room/Doors/DoorD/AreaDD"]
shape = SubResource( 15 )

[node name="DoorL" type="MeshInstance" parent="Room/Doors"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 9.9 )
mesh = SubResource( 13 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Room/Doors/DoorL"]

[node name="CollisionShape" type="CollisionShape" parent="Room/Doors/DoorL/StaticBody"]
shape = SubResource( 14 )

[node name="AreaDL" type="Area" parent="Room/Doors/DoorL"]
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Room/Doors/DoorL/AreaDL"]
shape = SubResource( 15 )

[node name="DoorM" type="MeshInstance" parent="Room/Doors"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -9.9, 3, 0 )
mesh = SubResource( 13 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Room/Doors/DoorM"]

[node name="CollisionShape" type="CollisionShape" parent="Room/Doors/DoorM/StaticBody"]
shape = SubResource( 14 )

[node name="AreaDM" type="Area" parent="Room/Doors/DoorM"]
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Room/Doors/DoorM/AreaDM"]
shape = SubResource( 15 )

[node name="Gary" parent="." instance=ExtResource( 3 )]
[connection signal="body_entered" from="Room/Doors/DoorF/AreaDF" to="Room/Doors/DoorF/AreaDF" method="_on_Area_body_entered"]
[connection signal="body_entered" from="Room/Doors/DoorD/AreaDD" to="Room/Doors/DoorD/AreaDD" method="_on_Area_body_entered"]
[connection signal="body_entered" from="Room/Doors/DoorL/AreaDL" to="Room/Doors/DoorL/AreaDL" method="_on_Area_body_entered"]
[connection signal="body_entered" from="Room/Doors/DoorM/AreaDM" to="Room/Doors/DoorM/AreaDM" method="_on_Area_body_entered"]
